# automata-repo

./: .env.example  .gitignore  AI_INTEGRATION_STRATEGY.md  BUNDLE_OPTIMIZATION_IMPLEMENTATION.md  DEPLOYMENT.md  DEPLOYMENT_COMPARISON.md  DEPLOYMENT_README.md  DEPLOY_NOW.md  GOOGLE_DRIVE_SETUP.md  IMPLEMENTATION_COMPLETE.md  JFLAP_IMPLEMENTATION_COMPLETE.md  MASTER_ROADMAP.md  PHASE1_COMPLETE.md  README.md  SECURITY_FIXES_COMPLETE.md  TEST_GUIDE.md  VAST_AI_SETUP_GUIDE.md  WEBSOCKET_INFRASTRUCTURE.md  docker-compose.prod.yml  docker-compose.yml  jflap_extracted_content.json  quick-test.sh  start.sh  test_jflap_complete.py  test_jflap_implementation.py
backend/: .env.example  Dockerfile  HYBRID_SYSTEM_README.md  LOAD_BALANCING_SETUP.md  PHASE_1.5_AUTH_REMOVAL.md  demo_hybrid_system.py  docker-compose.loadbalancer.yml  pyproject.toml  requirements.txt  requirements_additions.txt  test_new_features.py
backend/app/: LANGGRAPH_IMPLEMENTATION_GUIDE.md  OLLAMA_INTEGRATION_GUIDE.md  adaptive_learning.py  agent_system.py  agents.py  ai_config.py  ai_jflap_config.py  ai_jflap_integration.py  ai_proof_assistant.py  api_platform.py  auth.py  automata_construction_flow.py  automata_construction_graph.py  automata_tools.py  automated_grading.py  cache_integration.py  cdn_config.py  checkpoint_manager.py  complexity.py  config.py  courses.py  database.py  database_optimization.py  enhanced_learning_system.py  health.py  health_checks.py  hybrid_orchestrator.py  intelligent_router.py  intelligent_solver.py  jflap_advanced.py  jflap_complete.py  jflap_integration.py  jflap_simulator.py  (+48 more)
(+198 files in other folders)
